# nibl

./: CMakeLists.txt  README.md  tests.nl  todo.org
bench/: fib.nl  fib.py  fibt.nl  fibt.py
src/: main.cpp
src/nibl/: call.hpp  env.cpp  env.hpp  error.cpp  error.hpp  eval.cpp  eval.hpp  form.cpp  form.hpp  fun.cpp  fun.hpp  func.cpp  func.hpp  lib.cpp  lib.hpp  macro.cpp  macro.hpp  op.cpp  op.hpp  pos.cpp  pos.hpp  prim.cpp  prim.hpp  read.cpp  read.hpp  repl.cpp  repl.hpp  stack.cpp  stack.hpp  timer.hpp  type.cpp  type.hpp  types.hpp  utils.hpp  val.cpp  val.hpp  vm.cpp  vm.hpp
src/nibl/forms/: id.cpp  id.hpp  interp.cpp  interp.hpp  lit.cpp  lit.hpp  ref.cpp  ref.hpp
src/nibl/libs/: abc.cpp  abc.hpp
